Bug 262313 - krdc vnc plugins does not set encodings correctly
Summary: krdc vnc plugins does not set encodings correctly
Status: RESOLVED FIXED
Alias: None
Product: krdc
Classification: Applications
Component: VNC (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Urs Wolfer
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-01-06 15:42 UTC by Corentin Chary
Modified: 2011-01-07 00:22 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
krdc-vnc-fix-encodings.diff (1.24 KB, patch)
2011-01-06 15:43 UTC, Corentin Chary
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Corentin Chary 2011-01-06 15:42:07 UTC
Version:           unspecified (using Devel) 
OS:                Linux

Even if krdc sets encodingsString, it never calls SetFormatAndEncodings() (see client_examples/SDLVncviewer.c), and thus encodings are not set (checked with wireshark).

Reproducible: Always

Steps to Reproduce:
- Open wireshark and start sniffing
- Connection to a VNC server with krdc
- Check what happened on the network

Actual Results:  
- default libvncserver encodings are sent

Expected Results:  
- encodings sets by krdc are sent

Attached a patch to fix that bug. The patch also reorder encodings: zlib should be before hextile because it's lossless and more efficient.
Comment 1 Corentin Chary 2011-01-06 15:43:36 UTC
Created attachment 55648 [details]
krdc-vnc-fix-encodings.diff

ooops, forgot the patch...
Comment 2 Urs Wolfer 2011-01-07 00:01:14 UTC
SVN commit 1212419 by uwolfer:

Fix setting VNC encodings.

Patch by Corentin Chary <corentin.chary gmail.com>, thanks!

BUG:262313

 M  +4 -3      vncclientthread.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1212419
Comment 3 Urs Wolfer 2011-01-07 00:22:35 UTC
SVN commit 1212422 by uwolfer:

Backport to 4.6 branch:

SVN commit 1212419 by uwolfer:

Fix setting VNC encodings.

Patch by Corentin Chary <corentin.chary gmail.com>, thanks!


CCBUG:262313

 M  +4 -3      vncclientthread.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1212422