Fix setting VNC encodings.

Patch by Corentin Chary <corentin.chary gmail.com>, thanks!

BUG:262313

svn path=/trunk/KDE/kdenetwork/krdc/; revision=1212419